# HumbleBot

./: .gitignore  README.md  install_require_pkgs.bash  micro_ros_communication.sh
docs/: CNAME
humblebot_arduino_micro_ros/: platformio.ini
humblebot_arduino_micro_ros/src/: main.cpp
humblebot_bringup/: CMakeLists.txt  package.xml
humblebot_bringup/launch/: backwards.launch.py  display.launch.xml  forward.launch.py  start_camera.launch.py  start_rplidar.launch.xml  stop_rplidar.launch.xml  test_move.launch.py  turn_left.launch.py  turn_right.launch.py
humblebot_description/: CMakeLists.txt  humblebot.urdf  package.xml
humblebot_description/launch/: display.launch.xml
humblebot_description/rviz/: rplidar_config.rviz  urdf_config.rviz
humblebot_description/urdf/: common_properties.xacro  humblebot.urdf  humblebot.xacro  lidar.xacro  mobile_base.xacro
humblebot_documentation/: index.rst
humblebot_documentation/Documents/: Mobil robot alkatrészek.xlsx
humblebot_documentation/Models/: 2nd_floor.f3d  2nd_floor.stl  Base.f3d  Base.stl  Motor_holder.stl  Motor_wheel_holder.f3z  Omni_1.f3d  Omni_1.stl  Omni_2.f3d  Omni_2.stl  Omni_roller.f3d  Omni_roller.stl  Omni_spacer.f3d  Omni_spacer.stl  Top_floor.f3z  Top_floor.stl  Wall_Pi_camera.f3z  Wall_Pi_camera.stl  Wall_RPLidar.f3d  Wall_RPLidar.stl  Wall_Raspberry.f3d  Wall_Raspberry.stl  Wall_moto_shield.f3z  Wall_motor_shield.stl  bearing_holder.stl
humblebot_interfaces/: CMakeLists.txt  package.xml
humblebot_interfaces/action/: Steppers.action
humblebot_interfaces/msg/: WheelVelocities.msg
humblebot_navigation2/: CMakeLists.txt  package.xml
humblebot_navigation2/mapper_params/: mapper_params_online_async.yaml
humblebot_nodes/: package.xml  setup.cfg  setup.py
(+8 files in other folders)
