<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>humblebot_bringup</name>
  <version>0.0.0</version>
  <description>This package contains all the launch files.</description>
  <maintainer email="gati.krisztian10@gmail.com">en</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>humblebot_nodes</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher_gui</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rviz2</exec_depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
